kustomize/overlays/api/rogfk-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-personvern-kodeverk
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`api.felleskomponent.no`) && (PathPrefix( `/personvern/kodeverk`)) && Headers(`x-org-id`, `rogfk.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-personvern-kodeverk
          port: 8080
